--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  ---
+layout: index
+lang: en
+---
+
 <head>
   <meta charset="utf-8" />
   <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
