Update .babelrc, .env, and 22 more files...

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,12 @@
     user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
   -->
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons|Roboto:400,500,700|Source+Code+Pro" />
+    <!-- the styles are loaded through the CDN to speed up codesandbox demos. You'll normally want to import the `src/styles.scss` in the `src/index.tsx` instead to create custom themes -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/mlaursen/react-md@5.1.4/themes/react-md.teal-pink-200-dark.min.css"
+    />
     <!--
     Notice the use of %PUBLIC_URL% in the tags above.
     It will be replaced with the URL of the `public` folder during the build.
